infrastructure/ingress/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: default
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https-arcadia
      protocol: HTTPS
      port: 443
      hostname: arcadia.good-robert.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: arcadia-good-robert-com-tls
            namespace: arcadia
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
